fix: 修正(优化)一些自定义短语的使用方式
由于暂时无法设定自定义短语的位置，会出现自定义短语在最前面的情况，导致一些常用词不在首位。
因此将一些词语放到词库中。

--- a/dicts/simp.dict.yaml
+++ b/dicts/simp.dict.yaml
@@ -83,6 +83,7 @@ vocabulary: essay-zh-hans
 爱	ai	3906018
 唉	ai	3344820
 哎	ai	2141602
+AI	ai	2141601
 挨	ai	231755
 矮	ai	172070
 艾	ai	161680
@@ -5638,6 +5639,7 @@ vocabulary: essay-zh-hans
 是	shi	142460771
 时	shi	14342995
 事	shi	4771989
+UI	shi	4771988
 使	shi	4248575
 市	shi	2266561
 式	shi	1397438
